# pomegranate

./: .env  .env.example  .env.sample  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
.github/actions/prepare_rust/: action.yml
.github/workflows/: build_and_tests.yml  ci.yml  doc.yml  release_docker_image.yml
proto/: pomegranate.proto
src/: application.rs  config.rs  db.rs  errors.rs  grpc_server.rs  lib.rs  main.rs  server.rs
src/config/: application_config.rs  database_config.rs  mod.rs  traefik_config.rs
src/engine/: docker_engine.rs  engine.rs  errors.rs  mod.rs
tests/: integration_tests.rs
