[package]
name = "pomegranate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bollard = "0.14"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
postgres = "0.19.5"
tonic = "0.9.2"
tokio = { version = "1" }
futures = "0.3.28"
anyhow = { version = "1.0.71", features = ["backtrace"] }
