[package]
name = "pomegranate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bollard = "0.14"
env_logger = "0.10.0"
log = "0.4.19"
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
paastech-proto = { git = "https://github.com/paastech-cloud/proto.git" }
futures = "0.3.28"
anyhow = { version = "1.0.71", features = ["backtrace"] }
serde_json = "1.0.97"
chrono = "0.4.26"

bytes = "1.4.0"
